<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context="activity.StartActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:textSize="34sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/startLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/primary"
        android:text="@string/login" />

    <Button
        android:id="@+id/startRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/primary"
        android:text="@string/register" />
</LinearLayout>
